--- a/index.html
+++ b/index.html
@@ -364,5 +364,14 @@
         </div>
     </div>
 </footer>
+<script>
+    document.getElementById("backtotop").addEventListener("click", function() {
+    window.scrollTo({
+        top: 0,
+        behavior: "smooth" 
+    });
+});
+
+</script>
 </body>
 </html>
