--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 <br>
 <footer>
     <div class="footer-panel1">
-        <p>Back To Top</p>
+        <p id="backtotop">Back To Top</p>
     </div>
     <div class="footer-panel2">
         <ul>
